# rc-visual

./: .gitignore  ArpNow.h  Makefile.am  Makefile.in  Osc_Server.h  README  README.markdown  README.md  RunMan.cpp  RunMan.h  Vel.cpp  Visual.h  Visual.layout  configure  configure.ac  description-pak  main.cpp  make_deb.sh  visual.layout  visual_UML.dia
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
branches/LoadsXML-0.2.0/trunk/: configure.ac
branches/LoadsXML-0.2.0/trunk/autom4te.cache/: traces.1
classes/: Sprite_Collection.h  Sprite_File.cpp  Sprite_File.h
classes/tests/sprite_class/: sprite_class.cbp
data/: Makefile.am  Makefile.in  example.xml  sprite_test.xml  test.txt  visual_sprites.txt  visual_sprites.xml
prj/: Makefile  libvisual.cbp  premake4.lua  rc-visual-send.depend  rc-visual-send.layout  rc-visual-send.make  rc-visual.cbp  rc-visual.workspace  tests.depend  visualClasses.make
prj/rc-visual-send.xcodeproj/: project.pbxproj
prj/rc-visual.xcodeproj/: project.pbxproj
prj/tests/: TestApp.cpp  testMain.cpp
src/: Makefile.am  Makefile.in  config.h
src/classes/: BitmapSprite.h  Object.h  Sprite_Collection.h  Sprite_File.h
src/lib/: ImageIO.h  Makefile.in  SdlContext.cpp  Sprite.cpp  Sprite.h  Sprite_Collection.cpp  Sprite_File.cpp  Sprite_File.h
src/lib/.deps/: Osc_Server.Po  Sprite_Collection.Po
src/oscpack/osc/: OscHostEndianness.h  OscPrintReceivedElements.cpp
src/rc-visual/: App.cpp  App.h  Common.h  Config.cpp  Config.h  Makefile  Makefile.am  Makefile.in  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Util.cpp  Util.h  main.cpp
src/rc-visual-send/: Makefile  Makefile.am  Makefile.in  main.cpp
src/rc-visual-send/.deps/: main.Po
src/rc-visual-tests/: main.cpp
src/rc-visual/luaframework/: LuaWrapper.cpp  LuaWrapper.h  luaframework.h
src/rc-visual/objects/: Bitmap.cpp  Bitmap.h  DrawableObject.h  Image.cpp  Image.h  Line.h  Objects.h  Pixel.h  Rect.h  Sprite.cpp  Sprite.h  Text.h
src/tinyxml/: Makefile  Makefile.am
src/tinyxml/.deps/: tinyxml.Po  tinyxmlerror.Po
tags/initial-0.1.0/prj/: tests.layout
tags/initial-0.1.0/src/: Makefile
tags/rc-visual-0.1.0/: Makefile.in  config.status
tags/rc-visual-0.1.0-orig-opengl/: ArpNow.cpp  Vel.h  Visual.cbp  Visual.cpp  Visual.depend  main.cpp
tags/rc-visual-0.1.0/autom4te.cache/: output.1  output.2
tags/rc-visual-0.1.0/pd/: osc-control.pd
tags/rc-visual-0.1.0/prj/: libvisual.layout  rc-visual-send.cbp  rc-visual.cbp  rc-visual.depend  rc-visual.layout  rc-visual.workspace  tests.cbp
tags/rc-visual-0.2.0/: Makefile  Makefile.in  config.status  configure  configure.ac
tags/rc-visual-0.2.0-alpha-textfile/: version.h  visual.cbp  visual.depend
tags/rc-visual-0.2.0-alpha-textfile/classes/: Sprite.h
tags/rc-visual-0.2.0-alpha-textfile/data/: test.txt
tags/rc-visual-0.2.0/autom4te.cache/: output.1
tags/rc-visual-0.2.0/prj/: libvisual.cbp  rc-visual.layout  tests.depend
tags/rc-visual-0.2.0/src/: Makefile  Makefile.am  Makefile.in  config.h
tags/rc-visual-0.3.0-textfile/autom4te.cache/: output.1  traces.0  traces.1
tags/rc-visual-0.3.0-textfile/data/: test2.txt
tags/rc-visual-0.3.0-textfile/prj/: libvisual.layout  rc-visual-send.layout  rc-visual.layout  tests.layout
tags/rc-visual-0.3.0-textfile/src/: Makefile.am
tags/rc-visual-0.3.0-textfile/src/lib/: Makefile.am  Makefile.in  Sprite_Collection.h  Sprite_File.h
tags/rc-visual-0.4.0-xmlfile/: Makefile.in  README  Required Packages.txt  configure  configure.ac
tags/rc-visual-0.4.0-xmlfile/autom4te.cache/: requests  traces.0  traces.1
tags/rc-visual-0.4.0-xmlfile/prj/: rc-visual.depend  tests.cbp
tags/rc-visual-0.4.0-xmlfile/src/: Makefile.in
trunk/autom4te.cache/: traces.2
trunk/pd/: osc-control.pd
trunk/prj/: Makefile  externals.cbp  externals.make  libvisual.cbp  libvisual.layout  oscpack.cbp  premake.lua  rc-visual-send.cbp  rc-visual-send.make  rc-visual-tests.cbp  rc-visual-tests.make  rc-visual.cbp  rc-visual.depend  rc-visual.layout  rc-visual.make  rc-visual.workspace  tests.cbp  tests.depend  tests.layout  tinyxml.cbp  visualClasses.cbp  visualClasses.make
trunk/prj/tests/: ClassTest.cpp  testMain.cpp  testOSC.pd
trunk/src/classes/: Rectangle.h  Sprite_Group.h  Texture.h
trunk/src/lib/: Application.cpp  BitmapSprite.cpp  BitmapSprite.h  Color.h  Common.h  Graphics.cpp  Graphics.h  Group.cpp  Group.h  Log.h  Object.h  Rectangle.cpp  Rectangle.h  Scene.cpp  Scene.h  Sprite-Image.cpp  Sprite.cpp  Sprite.h  Sprite_Collection.cpp  Sprite_Collection.h  Sprite_File.cpp  Sprite_File.h  Sprite_Group.cpp  Sprite_Group.h  Texture.cpp  Texture.h
trunk/src/rc-visual/: Pressure.h  Visual.cpp  Visual.h  main.cpp
(+61 files in other folders)
