# tinyxml lib

# the library to build, dont install just link to execs
noinst_LIBRARIES = libtinyxml.a

# libs sources, headers here because we dont want to install them
libtinyxml_a_SOURCES =	tinyxml.h tinyxml.cpp \
						tinystr.h tinystr.cpp \
						tinyxmlerror.cpp tinyxmlparser.cpp

# include paths
AM_CPPFLAGS = $(CXXFLAGS)

# libs to link
AM_LDFLAGS =

